# JuThesis

./: .gitignore  README.md  examples.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
JuThesis/: cli.py
JuThesis/adapters/: __init__.py  input_adapter.py  output_adapter.py
JuThesis/core/: models.py  solver.py
JuThesis/io/readers/: json_reader.py  reader_abc.py
JuThesis/io/writers/: json_writer.py  writer_abc.py
JuThesis/protocols/: models.py
JuThesis/protocols/schemas/: ProtocolInput_v1.0.0.json  ProtocolOutput_v1.0.0.json
docs/: Protocol_v1.0.0.md
examples/: examples.py  input.json
tests/core/: test_models.py  test_solver.py
