[project]
name = "juthesis"
version = "0.1.0"
description = ""
authors = [
    { name = "vplotnikov16", email = "vplotnikov16@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "poetry-core (>=2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
