[tool.poetry]
name = "juthesis"
version = "1.0.0"
description = "Test suite optimization library with time budget constraints"
authors = ["unknown_name <unknown_email>"]
readme = "README.md"
packages = [{ include = "JuThesis" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
juthesis = "JuThesis.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
